# FreakSystemMonitor

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  init_debug.bat  main.cpp  run_debug.bat
app/: defines.hpp  run_program.cpp
app/includes/: application.hpp  process.hpp  thread.hpp  window.hpp
app/source/: application.cpp  process.cpp  thread.cpp  window.cpp
gui/buttons/: buttons.hpp
gui/sections/: sections.hpp
gui/tabs/: tabs.hpp
includes/: main_window.hpp
lib/: processor_detection.hpp  types.hpp
lib/containers/: vector.hpp
phlib/includes/: phbase.hpp  phbasesup.hpp  phconfig.hpp  phdata.hpp  phnt.hpp  phnt_windows.hpp  phsup.hpp  queuedlock.hpp  ref.hpp
phnt/include/: phnt_ntdef.hpp
sdk/includes/: appresolver.hpp
source/: main_window.cpp
